--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phone Finder</title>
-</head>
-<body>
-  
-</body>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Phone Finder</title>
+    <!---------- Bootstrap Stylesheet ---------->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!---------- Custom Styles ---------->
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+
+  <body>
+    <!---------- Heeader Start ---------->
+    <header class="container text-center mt-5">
+      <h1>Phone Finder</h1>
+    </header>
+    <!---------- Heeader End ---------->
+    
+    <!---------- JS Script ---------->
+    <script src="./js/app.js"></script>
+  </body>
+
 </html>
