search box added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
       <h1>Phone Finder</h1>
     </header>
     <!---------- Heeader End ---------->
-    
+    <!---------- Main Section Start ---------->
+    <main>
+      <!---------- Search Section Start ---------->
+      <section class="container mt-4">
+        <div class="d-flex">
+          <input id="input-value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
+        </div>
+      </section>
+      <!---------- Search Section End ---------->
+    </main>
+    <!---------- Main Section End ---------->
     <!---------- JS Script ---------->
     <script src="./js/app.js"></script>
   </body>
