display search result added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </div>
       </section>
       <!---------- Search Section End ---------->
+      <!---------- Search Display Section Start ---------->
+      <section class="container mt-4">
+        <div id="main" class="row">
+          
+        </div>
+      </section>
+      <!---------- Search Display Section Start ---------->
     </main>
     <!---------- Main Section End ---------->
     <!---------- JS Script ---------->
