--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!---------- Search Section End ---------->
       <!---------- Search Display Section Start ---------->
       <section class="container mt-4">
-        <div id="main" class="row">
+        <div id="result" class="row">
           
         </div>
       </section>
