details result added

--- a/index.html
+++ b/index.html
@@ -21,21 +21,28 @@
     <!---------- Heeader End ---------->
     <!---------- Main Section Start ---------->
     <main>
-      <!---------- Search Section Start ---------->
+      <!---------- Search Box Section Start ---------->
       <section class="container mt-4">
         <div class="d-flex">
           <input id="input-value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
       </section>
-      <!---------- Search Section End ---------->
-      <!---------- Search Display Section Start ---------->
+      <!---------- Search Box Section End ---------->
+      <!---------- Display Phone Details Section Start ---------->
       <section class="container mt-4">
-        <div id="result" class="row">
-          
+        <div id="details" class="row">
+
         </div>
       </section>
-      <!---------- Search Display Section Start ---------->
+      <!---------- Display Phone Details Section End ---------->
+      <!---------- Display Search Result Section Start ---------->
+      <section class="container mt-4">
+        <div id="result" class="row">
+
+        </div>
+      </section>
+      <!---------- Display Search Result Section End ---------->
     </main>
     <!---------- Main Section End ---------->
     <!---------- JS Script ---------->
@@ -43,3 +50,4 @@
   </body>
 
 </html>
+<h2></h2>
