--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </div>
       </section>
       <!---------- Search Box Section End ---------->
+      <!---------- Error Message Section Start ---------->
+      <section class="container mt-4">
+        <h2 id="error" class="text-danger text-center"></h2>
+      </section>
+      <!---------- Error Message Section End ---------->
       <!---------- Display Phone Details Section Start ---------->
       <section class="container mt-4">
         <div id="details" class="row">
