--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </div>
       </section>
       <!---------- Search Box Section End ---------->
+      <!---------- Spinner Section Start ---------->
+      <section class="container mt-4">
+        <div id="spinner" class="text-center">Loading...</div>
+      </section>
+      <!---------- Spinner Section End ---------->
       <!---------- Error Message Section Start ---------->
       <section class="container mt-4">
         <h2 id="error" class="text-danger text-center"></h2>
