sensor details bug fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!---------- Error Message Section End ---------->
       <!---------- Display Phone Details Section Start ---------->
       <section class="container mt-4">
-        <div id="details" class="row">
+        <div id="details" class="d-flex justify-content-center">
 
         </div>
       </section>
