load more button added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         </div>
       </section>
       <!---------- Display Search Result Section End ---------->
+      <!---------- Load More Result Section Start ---------->
+      <section class="container mb-4 d-flex justify-content-center">
+        <button id="more" class="btn btn-primary" onclick="searchResult(allphone)">Load More</button>
+      </section>
+      <!---------- Load More Result Section End ---------->
     </main>
     <!---------- Main Section End ---------->
     <!---------- JS Script ---------->
