--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Finder</title>
+    <!---------- Favicon ---------->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!---------- Bootstrap Stylesheet ---------->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!---------- Custom Styles ---------->
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -19,6 +20,7 @@
       <h1>Phone Finder</h1>
     </header>
     <!---------- Heeader End ---------->
+
     <!---------- Main Section Start ---------->
     <main>
       <!---------- Search Box Section Start ---------->
@@ -29,35 +31,36 @@
         </div>
       </section>
       <!---------- Search Box Section End ---------->
+
       <!---------- Spinner Section Start ---------->
       <section class="container mt-4">
         <div id="spinner" class="text-center">Loading...</div>
       </section>
       <!---------- Spinner Section End ---------->
+
       <!---------- Error Message Section Start ---------->
       <section class="container mt-4">
         <h2 id="error" class="text-danger text-center"></h2>
       </section>
       <!---------- Error Message Section End ---------->
+
       <!---------- Display Phone Details Section Start ---------->
       <section class="container mt-4">
-        <div id="details" class="d-flex justify-content-center">
-
-        </div>
+        <div id="details" class="d-flex justify-content-center"></div>
       </section>
       <!---------- Display Phone Details Section End ---------->
+
       <!---------- Display Search Result Section Start ---------->
       <section class="container mt-4">
-        <div id="result" class="row">
-
-        </div>
+        <div id="result" class="row"></div>
       </section>
       <!---------- Display Search Result Section End ---------->
-      <!---------- Load More Result Section Start ---------->
+      
+      <!---------- Show More Result Section Start ---------->
       <section class="container mb-4 d-flex justify-content-center">
-        <button id="more" class="btn btn-primary" onclick="searchResult(allphone)">Load More</button>
+        <button id="show-more" class="btn btn-primary" onclick="searchResult(allphone)">Show More</button>
       </section>
-      <!---------- Load More Result Section End ---------->
+      <!---------- Show More Result Section End ---------->
     </main>
     <!---------- Main Section End ---------->
     <!---------- JS Script ---------->
