--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </head>
 
   <body>
-    <!---------- Heeader Start ---------->
+    <!---------- Header Start ---------->
     <header class="container text-center mt-5">
       <h1>Phone Finder</h1>
     </header>
-    <!---------- Heeader End ---------->
+    <!---------- Header End ---------->
 
     <!---------- Main Section Start ---------->
     <main>
