--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!---------- Header End ---------->
 
     <!---------- Main Section Start ---------->
-    <main>
+    <main class="container">
       <!---------- Search Box Section Start ---------->
       <section class="container mt-4">
         <div class="d-flex">
@@ -63,6 +63,11 @@
       <!---------- Show More Result Section End ---------->
     </main>
     <!---------- Main Section End ---------->
+    <!---------- Footer Start ---------->
+    <footer>
+      <p>&copy; Phone Finder 2022 All Rights Reserved.</p>
+    </footer>
+    <!---------- Footer End ---------->
     <!---------- JS Script ---------->
     <script src="./js/app.js"></script>
   </body>
