--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!---------- Main Section End ---------->
     <!---------- Footer Start ---------->
     <footer>
-      <p>&copy; Phone Finder 2022 All Rights Reserved.</p>
+      <p class="text-center mt-4">&copy; Phone Finder 2022 All Rights Reserved.</p>
     </footer>
     <!---------- Footer End ---------->
     <!---------- JS Script ---------->
